0.5.3
* Removed titles due to removal from Blizzard Armory.

0.5.2
* Added advanced item searching (source, dungeonId, type, subtype, etc)
* Fixed bug with http connection retries with ruby 1.9

0.5.0
* Removed character skills due to removal from Blizzard Armory, primary professions are still available.
* Reimplemented Armory login support to use central Blizzard authentication servers.
* Implemented basic read-only support for user/world calendars, now requires JSON gem.
* Seperated http_request to get enable getting XML and JSON files.
* Exposed now, next and prev guild bank paging values, next should be passed to the get_guild_bank_contents call to get the next page.
* Implemented ability to retrieve dungeon information from Armory.
* Changed guild bank file locations in line with Armory.
* All titles are now retrieved for the character in known_titles.

0.4.1
* Renamed armory_url_base to armory_base_url for consistency.
* Added cache timeout
* Added cache_refresh to options

Bugfixes:
* Added back in the member_count property to guild as it includes characters under level 10, which the members array does not
* Added missing :power attr_reader to Melee class.

0.4.0
* Added Guild Bank functionality
  Guild bank contents and transaction logs are now available.
  Accessing them requires that you login, which returns a cookie string which must be used for all subsequent requests.

  api = Wowr::API.new(:guild_name => 'my_guild', :realm => 'my_realm')
  cookie = api.login('myuser', 'mypass')
  api.get_guild_bank_contents(cookie)
  api.get_guild_bank_log(cookie)
  
  It's possible to specify the guild and usual extra parameters
  api.get_guild_bank_contents(cookie, "my_other_guild", :realm => 'other_realm)
  
  At no point are your user details stored and SSH is used for connections to the server.
  Thanks to Hesperus and SheepCow of Rawr for help with this.

* Buy and sell prices, as well as transactions in the guild bank now use Wowr::Classes::Money